# Instagram-Clone

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
api/: admin.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_user_full_name_alter_user_email_alter_user_mobile_and_more.py  0003_alter_user_mobile.py  0004_profile.py  0005_alter_profile_bio.py  0006_alter_user_options_alter_user_managers_and_more.py
api/notes/: models_notes.py
backend/: settings.py  urls.py
core/: models.py
frontend/: README.md  URL_VERIFICATION.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.js  client.js  config.js  index.js
frontend/src/components/: Avatar.jsx  Button.jsx  ProtectedRoute.jsx  Sidebar.jsx  StatItem.jsx
frontend/src/components/Input/: Input.jsx
frontend/src/pages/Home/: Home.jsx
frontend/src/pages/Login/: Login.jsx
frontend/src/pages/Profile/: Profile.jsx
frontend/src/pages/Register/: Register.jsx
frontend/src/utils/: validation.js
notes/: models_notes.py
rbac/: admin.py  models.py  permissions.py  serializers.py  views.py
users/: admin.py  models.py  serializers.py  signals.py  views.py
users/tests/: conftest.py
users/tests/api/: test_login_api.py  test_register_api.py
users/tests/integration/: test_login_integration.py  test_register_integration.py
users/tests/serializers/: test_login_serializer.py  test_register_serializer.py
